Add Recording overlay and fix performance a bit
Performance fix - websockets are too fast for Vue or even browser to change elements and are crashing them. I postponed adding elements in Vue by using requestAnimationFrame.

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -5,3 +5,17 @@
 .feather:not([class*=" stroke"]) {
   stroke-width: 1.5px;
 }
+
+.loading-anim {
+    animation: loading-spinner 1s linear infinite;
+}
+
+@keyframes loading-spinner {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
