--- a/src/app.pcss
+++ b/src/app.pcss
@@ -10,6 +10,11 @@
     animation: loading-spinner 1s linear infinite;
 }
 
+.rounded-b-0 {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
 @keyframes loading-spinner {
     0% {
         transform: rotate(0deg);
